@@ -1,124 +1,0 @@
-# ====================================================================
-# The Apache Software License, Version 1.1
-#
-# Copyright (c) 2000-2001 The Apache Software Foundation.  All rights
-# reserved.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions
-# are met:
-#
-# 1. Redistributions of source code must retain the above copyright
-#    notice, this list of conditions and the following disclaimer.
-#
-# 2. Redistributions in binary form must reproduce the above copyright
-#    notice, this list of conditions and the following disclaimer in
-#    the documentation and/or other materials provided with the
-#    distribution.
-#
-# 3. The end-user documentation included with the redistribution,
-#    if any, must include the following acknowledgment:
-#       "This product includes software developed by the
-#        Apache Software Foundation (http://www.apache.org/)."
-#    Alternately, this acknowledgment may appear in the software itself,
-#    if and wherever such third-party acknowledgments normally appear.
-#
-# 4. The names "Apache" and "Apache Software Foundation" must
-#    not be used to endorse or promote products derived from this
-#    software without prior written permission. For written
-#    permission, please contact apache@apache.org.
-#
-# 5. Products derived from this software may not be called "Apache",
-#    nor may "Apache" appear in their name, without prior written
-#    permission of the Apache Software Foundation.
-#
-# THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
-# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
-# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-# DISCLAIMED.  IN NO EVENT SHALL THE APACHE SOFTWARE FOUNDATION OR
-# ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
-# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
-# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
-# USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
-# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
-# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
-# OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
-# SUCH DAMAGE.
-# ====================================================================
-#
-# This software consists of voluntary contributions made by many
-# individuals on behalf of the Apache Software Foundation.  For more
-# information on the Apache Software Foundation, please see
-# <http://www.apache.org/>.
-#
-# The build environment was provided by Sascha Schumann.
-#
-
-include $(BUILD_BASE)/generated_lists
-
-TOUCH_FILES = mkinstalldirs install-sh missing
-
-config_h_in = include/ap_config_auto.h.in
-apr_configure = srclib/apr/configure
-mm_configure = srclib/apr/shmem/unix/mm/configure
-pcre_configure = srclib/pcre/configure
-aprutil_configure = srclib/apr-util/configure
-
-APACHE_TARGETS = $(TOUCH_FILES) configure $(config_h_in)
-
-APR_TARGETS = $(apr_configure) $(mm_configure) $(aprutil_configure)
-
-PCRE_TARGETS = $(pcre_configure)
-
-targets = .deps aclocal.m4 $(APACHE_TARGETS) $(APR_TARGETS) $(PCRE_TARGETS)
-
-cross_compile_warning = "warning: AC_TRY_RUN called without default to allow cross compiling"
-
-all: $(targets)
-
-.deps:
-	touch $@
-
-libtool_m4 = $(libtool_prefix)/share/aclocal/libtool.m4
-
-aclocal.m4: acinclude.m4 $(libtool_m4)
-	@echo rebuilding $@
-	@echo "dnl THIS FILE IS AUTOMATICALLY GENERATED BY buildconf" >$@
-	@echo "dnl edits here will be lost" >>$@
-	@cat acinclude.m4 $(libtool_m4) >> $@
-
-$(config_h_in): configure
-# explicitly remove target since autoheader does not seem to work 
-# correctly otherwise (timestamps are not updated)
-	@echo rebuilding $@
-	@rm -f $@
-	### the grep exits with (1), stopping the make... is there a way
-	### to preserve autoheader's exit across the grep?
-	-autoheader 2>&1 | grep -v $(cross_compile_warning)
-
-$(TOUCH_FILES):
-	touch $(TOUCH_FILES)
-
-configure: aclocal.m4 configure.in $(config_m4_files)
-	@echo rebuilding $@
-	rm -f config.cache
-	### the grep exits with (1), stopping the make... is there a way
-	### to preserve autoconf's exit across the grep?
-	-autoconf 2>&1 | grep -v $(cross_compile_warning)
-
-$(aprutil_configure): srclib/apr-util/configure.in 
-	@echo rebuilding $@
-	(cd srclib/apr-util && ./buildconf.sh)
-
-### we shouldn't (have to) know what goes into the configure script!
-$(apr_configure): srclib/apr/configure.in
-	@echo rebuilding $@
-	(cd srclib/apr && ./buildconf)
-
-$(pcre_configure): srclib/pcre/configure.in
-	@echo rebuilding $@
-	(cd srclib/pcre && autoconf)
-
-$(mm_configure): $(mm_configure).in
-	@echo rebuilding $@
-	(cd srclib/apr/shmem/unix/mm && autoconf)
