@@ -1,13 +1,122 @@
 #!/bin/sh
+# ====================================================================
+# The Apache Software License, Version 1.1
+#
+# Copyright (c) 2000-2001 The Apache Software Foundation.  All rights
+# reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions
+# are met:
+#
+# 1. Redistributions of source code must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+# 2. Redistributions in binary form must reproduce the above copyright
+#    notice, this list of conditions and the following disclaimer in
+#    the documentation and/or other materials provided with the
+#    distribution.
+#
+# 3. The end-user documentation included with the redistribution,
+#    if any, must include the following acknowledgment:
+#       "This product includes software developed by the
+#        Apache Software Foundation (http://www.apache.org/)."
+#    Alternately, this acknowledgment may appear in the software itself,
+#    if and wherever such third-party acknowledgments normally appear.
+#
+# 4. The names "Apache" and "Apache Software Foundation" must
+#    not be used to endorse or promote products derived from this
+#    software without prior written permission. For written
+#    permission, please contact apache@apache.org.
+#
+# 5. Products derived from this software may not be called "Apache",
+#    nor may "Apache" appear in their name, without prior written
+#    permission of the Apache Software Foundation.
+#
+# THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
+# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+# DISCLAIMED.  IN NO EVENT SHALL THE APACHE SOFTWARE FOUNDATION OR
+# ITS CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF
+# USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
+# OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+# SUCH DAMAGE.
+# ====================================================================
+#
+# This software consists of voluntary contributions made by many
+# individuals on behalf of the Apache Software Foundation.  For more
+# information on the Apache Software Foundation, please see
+# <http://www.apache.org/>.
+#
 
-BUILD_BASE=`pwd`
-export BUILD_BASE
+# buildconf: Build the support scripts needed to compile from a
+#            checked-out version of the source code.
 
+#
+# Check to be sure that we have the srclib dependencies checked-out
+#
+if [ ! -d srclib/apr -o ! -f srclib/apr/build/apr_common.m4 ]; then
+    echo ""
+    echo "You don't have a srclib/apr/ subdirectory.  Please get one:"
+    echo ""
+    echo "   cd srclib"
+    echo "   cvs -d :pserver:anoncvs@apache.org:/home/cvspublic login"
+    echo "      (password 'anoncvs')"
+    echo "   cvs -d :pserver:anoncvs@apache.org:/home/cvspublic co apr"
+    echo ""
+    exit 1
+fi
+if [ ! -d srclib/apr-util -o ! -f srclib/apr-util/Makefile.in ]; then
+    echo ""
+    echo "You don't have a srclib/apr-util/ subdirectory.  Please get one:"
+    echo ""
+    echo "   cd srclib"
+    echo "   cvs -d :pserver:anoncvs@apache.org:/home/cvspublic login"
+    echo "      (password 'anoncvs')"
+    echo "   cvs -d :pserver:anoncvs@apache.org:/home/cvspublic co apr-util"
+    echo ""
+    exit 1
+fi
+
+# These are temporary until Roy finishes the other build changes
+#
+touch .deps
+rm -f aclocal.m4
 rm -f generated_lists
 
 case "`uname`" in
 *BSD/OS*)
     ./build/bsd_makefile;;
 esac
+#
+# end temporary stuff
 
-${MAKE:-make} -f build/build.mk ${1+"$@"}
+apr_configure="srclib/apr/configure"
+aprutil_configure="srclib/apr-util/configure"
+pcre_configure="srclib/pcre/configure"
+config_h_in="include/ap_config_auto.h.in"
+
+cross_compile_warning="warning: AC_TRY_RUN called without default to allow cross compiling"
+
+echo rebuilding $apr_configure
+(cd srclib/apr && ./buildconf)
+
+echo rebuilding $aprutil_configure
+(cd srclib/apr-util && ./buildconf.sh)
+
+echo rebuilding $pcre_configure
+(cd srclib/pcre && autoconf)
+
+echo rebuilding $config_h_in
+rm -f $config_h_in
+autoheader 2>&1 | grep -v "$cross_compile_warning"
+
+echo rebuilding configure
+rm -f config.cache
+autoconf 2>&1 | grep -v "$cross_compile_warning"
+
+exit 0
